# Compression-Tool-for-txt-file

./: README.md
AlgorithmicFileCompressor/: CMakeLists.txt  README.md  war_and_peace_out.txt
AlgorithmicFileCompressor/include/: compressor.h
AlgorithmicFileCompressor/src/: compressor.cpp  main.cpp
AlgorithmicFileCompressor/tests/: CMakeLists.txt  test_compressor.cpp
